--- a/components/Section2/section2.module.css
+++ b/components/Section2/section2.module.css
@@ -1,5 +1,36 @@
 .container {
   width: 100vw;
   height: 100vh;
-  /* background: red; */
 }
+
+.title_container {
+  margin: auto;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  height: 35vh;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.title {
+  font-size: 2rem;
+  text-align: center;
+}
+.title_description {
+  text-align: center;
+  color: #c4c4c4;
+  font-size: 0.8rem;
+}
+.grid_container {
+  margin: 0;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
