--- a/components/Section2/grid.module.css
+++ b/components/Section2/grid.module.css
@@ -22,7 +22,6 @@
 .grid_item {
   overflow: hidden;
   text-align: center;
-  cursor: pointer;
   display: inline-block;
   border-radius: 3px;
   transition: 0.6s;
@@ -77,6 +76,7 @@
   height: 120px;
   object-fit: contain;
   background-color: white;
+  border-radius: 9999px;
 }
 
 .companies_container::after {
