--- a/components/Section2/grid.module.css
+++ b/components/Section2/grid.module.css
@@ -29,13 +29,11 @@
   border-radius: 9999px;
 }
 .grid_item,
-.light,
-.light1 {
+.light {
   width: 120px;
   height: 120px;
 }
-.light,
-.light1 {
+.light {
   position: absolute;
 
   bottom: 10px;
@@ -46,17 +44,9 @@
   transform: skew(-20deg) translate(-250px, 10px);
   animation: flash 5s ease-in-out infinite;
 }
-.grid_item .light1 {
-  background-color: #664d87;
-  transform: skew(-20deg) translate(-250px, 10px);
-}
+
 .grid_item:hover {
-  transform: rotateX(360deg);
-}
-.grid_item:hover .light1 {
-  background-color: #664d87;
-  transform: skew(-20deg) translate(250px, 10px);
-  transition: 0.5s;
+  transform: rotate(360deg);
 }
 
 @keyframes flash {
